--- a/kubernetes/dev/server-deployment.yaml
+++ b/kubernetes/dev/server-deployment.yaml
@@ -16,7 +16,7 @@ spec:
         - name: server
           image: server:latest
           ports:
-            - containerPort: 80
+            - containerPort: 8080
           env:
             - name: REDIS_HOST
               value: redis-cluster-ip-service
@@ -33,5 +33,5 @@ spec:
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: postgres_password
+                  name: postgres-password
                   key: POSTGRES_PASSWORD
