--- a/kubernetes/ingress-service.yaml
+++ b/kubernetes/ingress-service.yaml
@@ -10,7 +10,14 @@ spec:
   rules:
     - http:
         paths:
-          - path: (/api/?(.*)|/?(.*))
+          - path: /api/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: api-cluster-ip-service
+                port:
+                  number: 80
+          - path: /?(.*)
             pathType: Prefix
             backend:
               service:
