--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,14 +3,16 @@ upstream api {
 }
 
 server {
-    listen 80;
+  listen 80;
+  listen [::]:80;
 
-    location / {
-        proxy_pass http://api;
-    }
+  location / {
+      proxy_pass http://api;
+  }
 
-    location /api {
-        rewrite /api/(.*) /$1 break;
-        proxy_pass http://api;
-    }
+  location /api {
+      rewrite /api/(.*) /$1 break;
+      proxy_pass http://api;
+  }
+
 }
