--- a/kubernetes/wordpress-deployment.yaml
+++ b/kubernetes/wordpress-deployment.yaml
@@ -17,18 +17,13 @@ spec:
       - name: wordpress
         image: wordpress:latest
         env:
-        - name: MYSQL_USER
+        - name: WORDPRESS_DB_HOST
           value: mysql
-        - name: MYSQL_DATABASE
+        - name: WORDPRESS_DB_USER
           value: mysql
-        - name: MYSQL_PORT
-          value: '3306'
-        - name: MYSQL_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-root-password
-              key: MYSQL_ROOT_PASSWORD
-        - name: MYSQL_PASSWORD
+        - name: WORDPRESS_DB_NAME
+          value: mysql
+        - name: WORDPRESS_DB_PASSWORD
           valueFrom:
             secretKeyRef:
               name: mysql-password
