--- a/kubernetes/mysql-deployment.yaml
+++ b/kubernetes/mysql-deployment.yaml
@@ -25,6 +25,15 @@ spec:
             - name: mysql-storage
               mountPath: /var/lib/mysql
           env: 
+            - name: MYSQL_USER
+              value: mysql
+            - name: MYSQL_DATABASE
+              value: mysql
+            - name: MYSQL_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-password
+                  key: MYSQL_PASSWORD
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
