--- a/kubernetes/wordpress-deployment.yaml
+++ b/kubernetes/wordpress-deployment.yaml
@@ -18,7 +18,7 @@ spec:
         image: wordpress:latest
         env:
         - name: WORDPRESS_DB_HOST
-          value: mysql
+          value: mysql-cluster-ip-service
         - name: WORDPRESS_DB_USER
           value: mysql
         - name: WORDPRESS_DB_NAME
