--- a/kubernetes/mysql-cluster-ip-service.yaml
+++ b/kubernetes/mysql-cluster-ip-service.yaml
@@ -3,9 +3,9 @@ kind: Service
 metadata:
   name: mysql-cluster-ip-service
 spec:
-  type: ClusterIP
   selector:
     component: mysql
   ports:
     - port: 3306
-      targetPort: 3306
+  clusterIP: None
+    
