--- a/kubernetes/mysql-deployment.yaml
+++ b/kubernetes/mysql-deployment.yaml
@@ -18,22 +18,13 @@ spec:
             claimName: mysql-persistent-volume-claim
       containers:
         - name: mysql
-          image: mysql
+          image: mysql:latest
           ports:
             - containerPort: 3306
           volumeMounts:
             - name: mysql-storage
               mountPath: /var/lib/mysql
           env: 
-            - name: MYSQL_USER
-              value: mysql
-            - name: MYSQL_DATABASE
-              value: mysql
-            - name: MYSQL_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: mysql-password
-                  key: MYSQL_PASSWORD
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
