--- a/kubernetes/wordpress-deployment.yaml
+++ b/kubernetes/wordpress-deployment.yaml
@@ -14,8 +14,8 @@ spec:
         component: wordpress
     spec:
       containers:
-      - name: wordpress
-        image: wordpress:latest
+      - name: wordpress:4.8-apache
+        image: wordpress
         env:
         - name: WORDPRESS_DB_HOST
           value: mysql-cluster-ip-service
@@ -24,3 +24,10 @@ spec:
             secretKeyRef:
               name: mysql-root-password
               key: MYSQL_ROOT_PASSWORD
+        volumeMounts:
+        - name: wordpress-persistent-storage
+          mountPath: /var/www/html
+      volumes:
+      - name: wordpress-persistent-storage
+        persistentVolumeClaim:
+          claimName: wordpress-persistent-volume-claim
