--- a/kubernetes/mysql-deployment.yaml
+++ b/kubernetes/mysql-deployment.yaml
@@ -16,7 +16,7 @@ spec:
         component: mysql
     spec:
       containers:
-      - image: mysql:5.6
+      - image: mysql:latest
         name: mysql
         env:
         - name: MYSQL_ROOT_PASSWORD
