--- a/kubernetes/mysql-cluster-ip-service.yaml
+++ b/kubernetes/mysql-cluster-ip-service.yaml
@@ -1,12 +1,12 @@
-apiVersion: v1 
+apiVersion: v1
 kind: Service
 metadata:
-  name: mysql-cluster-ip-service
-spec:
-  selector:
+  name: mysql
+  labels:
     component: mysql
+spec:
+  type: ClusterIP
   ports:
     - port: 3306
-      targetPort: 3306
-  clusterIP: None
-    
+  selector:
+    component: mysql
