--- a/kubernetes/mysql-deployment.yaml
+++ b/kubernetes/mysql-deployment.yaml
@@ -5,41 +5,33 @@ metadata:
   labels:
     component: mysql
 spec:
+  replicas: 1
   selector:
     matchLabels:
       component: mysql
-  strategy:
-    type: Recreate
   template:
     metadata:
       labels:
         component: mysql
     spec:
       containers:
-      - image: mysql:latest
-        name: mysql
-        env:
-        - name: MYSQL_DATABASE
-          value: mysql
-        - name: MYSQL_USER
-          value: mysql
-        - name: MYSQL_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-password
-              key: MYSQL_PASSWORD
-        - name: MYSQL_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-root-password
-              key: MYSQL_ROOT_PASSWORD
-        ports:
-        - containerPort: 3306
+        - image: mysql:8
           name: mysql
-        volumeMounts:
-        - name: mysql-persistent-storage
-          mountPath: /var/lib/mysql
+          args:
+            - "--default-authentication-plugin=mysql_native_password"
+          env:
+            - name: MYSQL_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-root-password
+                  key: MYSQL_ROOT_PASSWORD
+          ports:
+            - containerPort: 3306
+              name: mysql
+          volumeMounts:
+            - name: mysql-persistent-storage
+              mountPath: /var/lib/mysql
       volumes:
-      - name: mysql-persistent-storage
-        persistentVolumeClaim:
-          claimName: mysql-persistent-volume-claim
+        - name: mysql-persistent-storage
+          persistentVolumeClaim:
+            claimName: mysql-persistent-volume-claim
