--- a/kubernetes/wordpress-deployment.yaml
+++ b/kubernetes/wordpress-deployment.yaml
@@ -5,38 +5,33 @@ metadata:
   labels:
     component: wordpress
 spec:
+  replicas: 1
   selector:
     matchLabels:
       component: wordpress
-  strategy:
-    type: Recreate
   template:
     metadata:
       labels:
         component: wordpress
     spec:
       containers:
-      - image: wordpress:latest
-        name: wordpress
-        env:
-        - name: WORDPRESS_DB_HOST
-          value: mysql-cluster-ip-service
-        - name: WORDPRESS_DB_NAME
-          value: mysql
-        - name: WORDPRESS_DB_USER
-          value: mysql
-        - name: WORDPRESS_DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-password
-              key: MYSQL_PASSWORD
-        ports:
-        - containerPort: 80
+        - image: wordpress
           name: wordpress
-        volumeMounts:
-        - name: wordpress-persistent-storage
-          mountPath: /var/www/html
+          env:
+          - name: WORDPRESS_DB_HOST
+            value: mysql:3306
+          - name: WORDPRESS_DB_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: mysql-root-password
+                key: MYSQL_ROOT_PASSWORD
+          ports:
+            - containerPort: 80
+              name: wordpress
+          volumeMounts:
+            - name: wordpress-persistent-storage
+              mountPath: /var/www/html
       volumes:
-      - name: wordpress-persistent-storage
-        persistentVolumeClaim:
-          claimName: wordpress-persistent-volume-claim
+        - name: wordpress-persistent-storage
+          persistentVolumeClaim:
+            claimName: wordpress-persistent-volume-claim
