add WORDPRESS_DB_NAME env var

--- a/kubernetes/wordpress-deployment.yaml
+++ b/kubernetes/wordpress-deployment.yaml
@@ -20,6 +20,8 @@ spec:
           env:
           - name: WORDPRESS_DB_HOST
             value: 127.0.0.1:3306
+          - name: WORDPRESS_DB_NAME
+            value: codetogive
           - name: WORDPRESS_DB_USER
             valueFrom:
               secretKeyRef:
