try to put mysql into GKE

--- a/kubernetes/wordpress-deployment-nocloudsql.yaml
+++ b/kubernetes/wordpress-deployment-nocloudsql.yaml
@@ -19,7 +19,7 @@ spec:
           name: wordpress
           env:
           - name: WORDPRESS_DB_HOST
-            value: 127.0.0.1:3306
+            value: mysql:3306
           - name: WORDPRESS_DB_NAME
             value: codetogive
           - name: WORDPRESS_DB_USER
@@ -38,22 +38,7 @@ spec:
           volumeMounts:
             - name: wordpress-persistent-storage
               mountPath: /var/www/html
-        - name: cloudsql-proxy
-          image: gcr.io/cloudsql-docker/gce-proxy:1.11
-          command: ["/cloud_sql_proxy",
-                    "-instances=abiding-cycle-362117:europe-central2:codetogive-mysql-instance=tcp:3306",
-                    "-credential_file=/secrets/cloudsql/key.json"]
-          securityContext:
-            runAsUser: 2
-            allowPrivilegeEscalation: false
-          volumeMounts:
-            - name: cloudsql-instance-credentials
-              mountPath: /secrets/cloudsql
-              readOnly: true
       volumes:
         - name: wordpress-persistent-storage
           persistentVolumeClaim:
             claimName: wordpress-persistent-volume-claim
-        - name: cloudsql-instance-credentials
-          secret:
-            secretName: cloudsql-instance-credentials
