--- a/kubernetes/ingress-service.yaml
+++ b/kubernetes/ingress-service.yaml
@@ -20,6 +20,13 @@ spec:
                 name: api-cluster-ip-service
                 port:
                   number: 80
+          - path: /client/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: client-cluster-ip-service
+                port:
+                  number: 3000
           - path: /?(.*)
             pathType: Prefix
             backend:
