--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,12 +2,23 @@ upstream api {
     server api:80;
 }
 
+upstream client {
+    server client:3000;
+}
+
 server {
   listen 80;
   listen [::]:80;
 
   location / {
-      proxy_pass http://api;
+    proxy_pass http://client;
+  }
+
+  location /ws {
+      proxy_pass http://client;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "Upgrade";
   }
 
   location /api {
