--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,11 +1,43 @@
-FROM node:18-alpine as builder
+FROM node:18-alpine AS deps
+# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
+RUN apk add --no-cache libc6-compat
 WORKDIR /client
-COPY ./package.json ./
-RUN npm install
+
+# Install dependencies based on the preferred package manager
+COPY package.json package-lock.json*  ./
+RUN npm ci
+
+
+# Rebuild the source code only when needed
+FROM node:18-alpine AS builder
+WORKDIR /client
+COPY --from=deps /client/node_modules ./node_modules
 COPY . .
+
 RUN npm run build
 
-FROM nginx
+# Production image, copy all the files and run next
+FROM node:16-alpine AS runner
+WORKDIR /client
+
+ENV NODE_ENV production
+# Uncomment the following line in case you want to disable telemetry during runtime.
+# ENV NEXT_TELEMETRY_DISABLED 1
+
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 nextjs
+
+COPY --from=builder /client/public ./public
+
+# Automatically leverage output traces to reduce image size
+# https://nextjs.org/docs/advanced-features/output-file-tracing
+COPY --from=builder --chown=nextjs:nodejs /client/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /client/.next/static ./.next/static
+
+USER nextjs
+
 EXPOSE 3000
-COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /client/build /usr/share/nginx/html
+
+ENV PORT 3000
+
+CMD ["node", "server.js"]
