--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -1,6 +1,6 @@
 FROM node:18-alpine
 WORKDIR /client
-COPY ./package.json ./
+COPY ./package.json package-lock.json* ./
 RUN npm install
 COPY . .
 CMD npm run dev
