--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build && next export && next-nginx-routes"
   },
   "dependencies": {
     "next": "12.3.0",
@@ -19,6 +20,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0",
+    "next-nginx-routes": "^1.0.0",
     "typescript": "4.8.3"
   }
 }
