--- a/kubernetes/ingress-service.yaml
+++ b/kubernetes/ingress-service.yaml
@@ -4,8 +4,6 @@ metadata:
   name: ingress-service
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/use-regex: 'true'
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.org/ssl-services: 'wordpress'
 spec:
   tls:
@@ -13,21 +11,21 @@ spec:
   rules:
     - http:
         paths:
-          - path: /api/?(.*)
+          - path: /api
             pathType: Prefix
             backend:
               service:
                 name: api-cluster-ip-service
                 port:
                   number: 80
-          - path: /client/?(.*)
+          - path: /client
             pathType: Prefix
             backend:
               service:
                 name: client-cluster-ip-service
                 port:
                   number: 80
-          - path: /?(.*)
+          - path: /wordpress
             pathType: Prefix
             backend:
               service:
