--- a/kubernetes/ingress-service.yaml
+++ b/kubernetes/ingress-service.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: 'true'
-    nginx.ingress.kubernetes.io/rewrite-target: /$2$3
+    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
     nginx.org/ssl-services: 'wordpress'
 spec:
   tls:
@@ -13,21 +13,21 @@ spec:
   rules:
     - http:
         paths:
-          - path: /()(api)(.*)
+          - path: /(api)(.*)
             pathType: Prefix
             backend:
               service:
                 name: api-cluster-ip-service
                 port:
                   number: 80
-          - path: /()(client)(.*)
+          - path: /(client)(.*)
             pathType: Prefix
             backend:
               service:
                 name: client-cluster-ip-service
                 port:
                   number: 80
-          - path: /()(wordpress)(.*)
+          - path: /(wordpress)(.*)
             pathType: Prefix
             backend:
               service:
