fix client nginx

--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -3,5 +3,7 @@ server {
     listen  [::]:80;
     root /usr/share/nginx/html/;
 
+    rewrite ^/client/(.*) /$1;  
+
     include /usr/share/nginx/next-routes.conf;
 }
