--- a/kubernetes/ingress-service.yaml
+++ b/kubernetes/ingress-service.yaml
@@ -5,7 +5,6 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: 'true'
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.org/ssl-services: 'wordpress'
 spec:
   tls:
@@ -27,7 +26,7 @@ spec:
                 name: client-cluster-ip-service
                 port:
                   number: 80
-          - path: /wordpress/?(.*)
+          - path: /?(.*)
             pathType: Prefix
             backend:
               service:
