fix client nginx

--- a/kubernetes/ingress-service.yaml
+++ b/kubernetes/ingress-service.yaml
@@ -26,6 +26,13 @@ spec:
                 name: client-cluster-ip-service
                 port:
                   number: 80
+          - path: /_next/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: client-cluster-ip-service
+                port:
+                  number: 80
           - path: /?(.*)
             pathType: Prefix
             backend:
