--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,11 +6,15 @@ upstream client {
     server client:3000;
 }
 
+upstream wordpress {
+  server wordpress:80;
+}
+
 server {
   listen 80;
   listen [::]:80;
 
-  location / {
+  location /client {
     proxy_pass http://client;
   }
 
@@ -21,9 +25,11 @@ server {
       proxy_set_header Connection "Upgrade";
   }
 
-  location /api {
-      rewrite /api/(.*) /$1 break;
+  location /api/v1 {
       proxy_pass http://api;
   }
 
+  location / {
+    proxy_pass http://wordpress;
+  }
 }
