--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -1,6 +1,7 @@
 FROM node:18-alpine
+RUN apk add --no-cache libc6-compat
 WORKDIR /client
-COPY ./CodeToGive2022_Frontend/package.json ./CodeToGive2022_Frontend/package-lock.json* ./
+COPY ./CodeToGive2022_Frontend/package.json ./
 RUN npm install
-COPY . .
+COPY ./CodeToGive2022_Frontend/ ./
 CMD npm run dev
