--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,15 +20,13 @@ services:
       context: ./client
     restart: always
     volumes:
+      - ./client/CodeToGive2022_Frontend:/client
       - /client/node_modules
-      - ./client:/client
   wordpress:
     image: 'wordpress:latest'
     restart: always
     depends_on:
       - mysql
-    ports:
-      - '80:80'
     environment:
       - WORDPRESS_DB_HOST=mysql
       - WORDPRESS_DB_USER=mysql
@@ -52,4 +50,4 @@ services:
       dockerfile: Dockerfile
       context: ./nginx
     ports:
-      - '8080:80'
+      - '80:80'
