--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -2,6 +2,7 @@ FROM node:18-alpine
 RUN apk add --no-cache libc6-compat
 WORKDIR /client
 COPY ./CodeToGive2022_Frontend/package.json ./
+COPY ./.env.development.local ./
 RUN npm install
 COPY ./CodeToGive2022_Frontend/ ./
 CMD npm run dev
