--- a/kubernetes/client-deployment.yaml
+++ b/kubernetes/client-deployment.yaml
@@ -17,3 +17,6 @@ spec:
           image: vantoan11/codetogive2022-client
           ports:
             - containerPort: 3000
+          env:
+            - name: HOST 
+              value: ""
