Fix client host deployment

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -9,6 +9,7 @@ RUN npm install
 
 # Rebuild the source code only when needed
 FROM node:18-alpine AS builder
+ENV HOST http://34.116.151.108
 WORKDIR /client
 COPY ./CodeToGive2022_Frontend/ .
 RUN rm -rf ./node_modules
@@ -35,4 +36,5 @@ COPY --from=builder --chown=nextjs:nodejs /client/.next/static ./.next/static
 USER nextjs
 EXPOSE 3000
 ENV PORT 3000
+ENV HOST http://34.116.151.108
 CMD ["node", "server.js"]
