--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
-version: '3'
+version: "3"
 services:
   api:
-    build: 
+    build:
       dockerfile: Dockerfile.dev
       context: ./server
     restart: always
+    depends_on:
+      - mysql
     volumes:
       - ./server/server:/server/server
     environment:
@@ -14,6 +16,7 @@ services:
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_PASSWORD=mysql
       - MYSQL_DATABASE=mysql
+      - MYSQL_HOST=mysql
   client:
     build:
       dockerfile: Dockerfile.dev
@@ -25,7 +28,7 @@ services:
     environment:
       - HOST=http://34.116.151.108
   wordpress:
-    image: 'wordpress:latest'
+    image: "wordpress:latest"
     restart: always
     depends_on:
       - mysql
@@ -35,15 +38,23 @@ services:
       - WORDPRESS_DB_PASSWORD=mysql
       - WORDPRESS_DB_NAME=mysql
   mysql:
-    image: 'mysql:latest'
+    image: "mysql:latest"
     restart: always
     environment:
       - MYSQL_USER=mysql
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_PASSWORD=mysql
       - MYSQL_DATABASE=mysql
+  phpmyadmin:
+    image: phpmyadmin
+    restart: always
+    ports:
+      - 8080:80
+    environment:
+      - PMA_HOST=mysql
+      - PMA_PASSWORD=password
   redis:
-    image: 'redis:latest'
+    image: "redis:latest"
   nginx:
     depends_on:
       - api
@@ -52,4 +63,4 @@ services:
       dockerfile: Dockerfile
       context: ./nginx
     ports:
-      - '80:80'
+      - "80:80"
