--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -11,7 +11,7 @@ fastapi = "^0.82.0"
 uvicorn = "^0.18.3"
 gunicorn = "^20.1.0"
 alembic = "^1.8.1"
-psycopg2 = "^2.9.3"
+mysqlclient = "^2.1.1"
 
 [tool.poetry.dev-dependencies]
 requests = "^2.28.1"
