add env speechly

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -37,4 +37,5 @@ USER nextjs
 EXPOSE 3000
 ENV PORT 3000
 ENV HOST http://34.116.151.108
+ENV NEXT_PUBLIC_SPEECHLY_APP_ID d1a2c48b-bacf-407b-9811-26b11be721d0
 CMD ["node", "server.js"]
