--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -12,6 +12,7 @@ uvicorn = "^0.18.3"
 gunicorn = "^20.1.0"
 alembic = "^1.8.1"
 mysqlclient = "^2.1.1"
+pydantic = {version = "*", extras = ["email"]}
 
 [tool.poetry.dev-dependencies]
 requests = "^2.28.1"
